Utilisation d'une DataTable provenant de la librairie de composants JSF PrimeFaces

--- a/src/main/webapp/cutomerList.xhtml
+++ b/src/main/webapp/cutomerList.xhtml
@@ -2,11 +2,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
-      xmlns:f="jakarta.faces.core">
+      xmlns:f="jakarta.faces.core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Gestion Client</title>
     </h:head>
     <h:body>
+        <h:form>
+            <p:dataTable value="#{customerBean.customers}" var="item"
+                paginator="true" rows="10"
+                rowsPerPageTemplate="2,4,8,10"
+                paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
+         </h:form>
         <h:dataTable value="#{customerBean.customers}"
                var="item">
             <h:column>
