--- a/src/main/webapp/cutomerList.xhtml
+++ b/src/main/webapp/cutomerList.xhtml
@@ -7,5 +7,21 @@
     <h:head>
         <title>Gestion Client</title>
     </h:head>
-    <p:dataTable value="#{customerBean.customers}" var="item" paginator="true" rows="10" rowsPerPageTemplate="2,4,8,10" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"/>
+    <h:body>
+         <p:dataTable value="#{customerBean.customers}" var="item">
+            <p:column>
+               <f:facet name="header">
+                   <h:outputText value="Id"/>
+               </f:facet>
+               <h:outputText value="#{item.customerId}"/>
+            </p:column>
+
+            <p:column>
+               <f:facet name="header">
+                   <h:outputText value="Nom"/>
+               </f:facet>
+               <h:outputText value="#{item.name}"/>
+            </p:column>
+        </p:dataTable>
+    </h:body>
 </html>
