--- a/src/main/webapp/cutomerList.xhtml
+++ b/src/main/webapp/cutomerList.xhtml
@@ -8,7 +8,20 @@
         <title>Gestion Client</title>
     </h:head>
     <h:body>
-         <p:dataTable value="#{customerBean.customers}" var="item">
+        <p:dataTable value="#{customerBean.customers}" var="item" widgetVar="customerTable"
+             emptyMessage="Aucun client avec ce critère"
+             paginator="true"
+             rows="10"
+             rowsPerPageTemplate="2,4,8,10"
+             paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
+          
+            <f:facet name="header">
+               <p:outputPanel>
+                  <h:outputText value="Recherche dans tous les champs de recherche"/>
+                  <p:inputText id="globalFilter" onkeyup="PF('customerTable').filter()"
+                               style="width:150px"/>
+               </p:outputPanel>
+            </f:facet>
             <p:column>
                <f:facet name="header">
                    <h:outputText value="Id"/>
